--- a/코드설명.md
+++ b/코드설명.md
@@ -279,9 +279,9 @@ public class ConfRoomService {
 
 #### ReserveInfoService.java
 - **회의실 예약정보를 확인하고 회의실 예약을 담당하는 Service**
-- getReserveInfoRequestList() 메소드: ReserveInfoController와 동일
+- getReserveInfoRequestList() 메소드: ReserveInfoController: getReserveInfoRequestList()와 동일
 - insertReserveInfoRequest() 메소드
-	- ReserveInfoController와 동일하나 반복예약의 경우 반복횟수만큼 데이터저장
+	- ReserveInfoController: insertReserveInfoRequest() 메소드와 동일하나 반복예약의 경우 반복횟수만큼 데이터저장
 - **reserveCheck() 메소드**
 	- 기존 회의실예약 정보를 확인하는 메소드
 	- return
