--- a/코드설명.md
+++ b/코드설명.md
@@ -292,7 +292,7 @@ public class ConfRoomService {
 		- 내용: 입력된 예약정보 Dto
 - **reserveCheckRepeat() 메소드**
 	- 반복예약의 경우 기존 회의실예약 정보를 확인하는 메소드
-		- ex)8월 23일 2회 반복예약 했을 경우 8월 23일, 8월 30일 예약정보를 확인
+		- ex)8월 23일 2회 반복예약 했을 경우 8월 23일, 8월 30일에 예약된 기존 예약정보를 확인
 	- return
 		- type: boolean
 		- 내용: 예약된 정보가 없을경우 true, 이미 예약된 경우 false를 return
