--- a/실행방법.md
+++ b/실행방법.md
@@ -3,6 +3,7 @@
 1) 실행 : npm 설치 후 쉘스크립트를 통해 프로젝트를 `Build`하고 실행합니다.
 - `Node.js` 사이트 방문하여 설치(https://nodejs.org/en/)
 - 프로젝트를 다운로드 받은 위치에서 터미널을 실행하고 `./build.sh` 명령어를 통해 프로젝트를 build합니다.
+  - **실행권한 문제 발생시 `chmod 755 build.sh run.sh` 명령어 수행해주시기 바랍니다.**
 - `./run.sh` 명령어를 실행하여 프로젝트를 실행합니다.
 - 브라우저 실행 후 url에 `http://localhost:8080`을 입력합니다.
 
